--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -15,4 +15,4 @@ $gray-900: #212529 !default;
 $black: #000 !default;
 
 $primary: #1D809F !default;
-$secondary: #ecb807 !default;
+$secondary: #013c4a !default;
